src/test/ui/where-clauses/where-equality-constraints.stderr
error: equality constraints are not yet supported in where clauses (see #20041)
  --> $DIR/where-equality-constraints.rs:1:14
   |
LL | fn f() where u8 = u16 {}
   |              ^^^^^^^^

error: equality constraints are not yet supported in where clauses (see #20041)
  --> $DIR/where-equality-constraints.rs:3:14
   |
LL | fn g() where for<'a> &'static (u8,) == u16, {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

